k8s/namespaces/mq/apps/activemq-artemis/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: activemq-artemis
  namespace: mq
  labels:
    app: activemq-artemis
spec:
  serviceName: activemq-artemis
  replicas: 1
  selector:
    matchLabels:
      app: activemq-artemis
  template:
    metadata:
      labels:
        app: activemq-artemis
    spec:
      containers:
        - name: artemis
          image: apache/activemq-artemis:2.44.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: core
              containerPort: 61616
            - name: amqp
              containerPort: 5672
            - name: web
              containerPort: 8161
          volumeMounts:
            - name: data
              mountPath: /var/lib/artemis-instance
          readinessProbe:
            tcpSocket:
              port: 61616
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 61616
            initialDelaySeconds: 30
            periodSeconds: 20
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
